(update) mengganti tema -homepage

--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="./src/assets/logo-osis.png" />
+    <link rel="icon" type="image" href="./src/assets/sman24.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OSIS SMAN 24 Bandung</title>
+    <title>SMAN 24 Bandung</title>
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@700&Roboto:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@700&Roboto:wght@700&Send+Flowers&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Send+Flowers&display=swap" rel="stylesheet">
 
     <!-- icon -->
     <link
