--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
       href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@700&Roboto:wght@700&Send+Flowers&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Send+Flowers&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Send+Flowers&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- icon -->
     <link
